infrastructure/monitoring/prometheus/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-system
  labels:
    name: monitoring-system
