infrastructure/monitoring/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring-system
  labels:
    traefik2: "true"
  annotations:
    kubernetes.io/ingress.class: cert
    #traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-dns01-provider: route53
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: prometheus.decort.tech
    http:
      paths:
      - path: /cert-placeholder
        backend:
          serviceName: prometheus
          servicePort: 9090
  tls:
  - hosts:
    - prometheus.decort.tech
    secretName: prometheus-cert  
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-route
  namespace: monitoring-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prometheus.decort.tech`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
      middlewares:
        - name: prometheus-security
        - name: traefik-auth
  tls:
    secretName: prometheus-cert
